<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Wallabag!</string>
    <string name="app_name">Wallabag</string>
    <string name="bag_it">Bag it!</string>
    <string name="author">GAULUPEAU Jonathan - 2013\nErick Pires - 2014\nMathijs Lagerberg - 2014</string>
    <string name="instructions">To save a web page to wallabag, open the page in a browser then tap <i>Share</i> and tap on <i>Bag it!</i>.\nYou could then see your wallabag login page.\nAnd it\'s done!\nMore infos about wallabag at wallabag.org.</string>
    <string name="btnDone">Save</string>
    <string name="which_browser">Which browser would you like to use?</string>
    <string name="authorSite">http://cv.gaulupeau.fr</string>
    <string name="url_label"><b>Your wallabag URL:</b></string>
    <string name="url_help">Examples:\n<i>https://demo.wallabag.org</i>\n<i>https://framabag.org/u/example</i></string>
    <string name="btnGetPost">List articles</string>
    <string name="btnSync">Synchronize</string>
    <string name="btnMarkRead">Send to archive</string>
    <string name="menuSettings">Settings</string>
    <string name="menuShowAll">Show all</string>
    <string name="menuWipeDb">Wipe database</string>
    <string name="txtSyncDone">Synchronize done</string>
    <string name="txtSyncFailed">Synchronize failed</string>
    <string name="txtNetOffline">Check internet connectivity</string>
    <string name="txtConfigNotSet">Please configure the app before syncing</string>
    <string name="txtGlobalToken"><b>API global token:</b></string>
    <string name="txtAPIUsername"><b>Your user ID (user_id in Feed URL):</b></string>
    <string name="txtAPIToken"><b>Your token (token in Feed URL):</b></string>
    <!-- <string name="unread_label">unread</string> -->
    <string name="refresh">Refresh</string>
    <plurals name="unread_articles">
        <item quantity="zero">You have no unread articles</item>
        <item quantity="one">You hae 1 unread article</item>
        <item quantity="other">You have %s unread articles</item>
    </plurals>
    <string name="marked_as_read">Article marked as read</string>
    <string name="marked_as_unread">Article marked as unread</string>
    <string name="wipe_data_base">Wiping database</string>
    <string name="sure">This operation will erase all the local database. Are you sure?</string>
    <string name="delete_account_info">Also delete account info</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="marked_as_fav">Article added to your Favorites</string>
    <string name="marked_as_not_fav">Article removed from your Favorites</string>
    <string name="fav_title">Toggle favorite</string>
    <string name="read_title">Send to archive</string>
    <string name="unread_title">Mark as unread</string>
    <string name="no_articles">You have no articles yet</string>
    <string name="bt_no_articles">Tap here to set up your account</string>
    <string name="share_title">Share</string>
    <string name="settings_general">General</string>
    <string name="setting_look_and_feel">Look and feel</string>
    <string name="settings_account">Account</string>
    <string name="settings_about">About</string>
    <string name="first_page">Set First Page</string>
    <string name="dark_theme">Use dark theme</string>
    <string name="font_size">Font size</string>
    <string name="font_style">Font style</string>
    <string name="rotation">Screen orientation</string>
    <string name="immersive">Immersive mode</string>
    <string name="sans_serif">Sans serif</string>
    <string name="serif">Serif</string>
    <string name="dynamic">Dynamic</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="text_align">Text align</string>
    <string name="auto">Auto</string>
    <string name="center">Center</string>
    <string name="justified">Justified</string>
    <string name="keep_screen_on">Keep screen always on</string>
    <string name="sort">Sort</string>
    <string name="newer">Newest first</string>
    <string name="older">Oldest first</string>
    <string name="alphabetical">Alphabetical order</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="fail_to_update">The app failed to update</string>
    <string name="drawer_all">All</string>
    <string name="drawer_unread">Unread</string>
    <string name="drawer_read">Archive</string>
    <string name="drawer_favorites">Favorites</string>
    <string name="drawer_settings">Options</string>
    <string name="welcome">Welcome</string>
    <string name="choose_installation">What kind of installation do you use</string>
    <string name="framabag">Framabag</string>
    <string name="another_server">Another server</string>
    <string name="user_name">User name</string>
    <string name="user_id">User ID</string>
    <string name="token">Token</string>
    <string name="server_url">Server URL</string>
    <string name="see_more">See more&#8230;</string>
    <string name="version_display">v%s</string>
    <string name="missing_content">[missing]</string>
    <string name="error_share_no_server">Please set up your Wallabag server before sharing</string>
    <string name="syncing">Syncing…</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="auto_refresh">Auto-refresh on launch</string>
    <string name="refresh_manual">Never</string>
    <string name="refresh_wifi">Only on WiFi</string>
    <string name="refresh_always">On WiFi and mobile data connection</string>
    <string name="delete_article">Delete</string>
    <string name="article_deleted">Article deleted</string>
    <string name="unable_to_retrieve">[unable to retrieve full-text content]</string>
    <string name="unable_to_retrieve_disp">Unable to retrieve full-text content</string>
    <string name="error_invalid_url">Sorry, unable to find a suitable app to open this link: %s.</string>

</resources>