<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="AppCompatResource">
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share_dark"
        android:title="@string/share_title" />
    <item
        android:id="@+id/fav"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/fav_title" />
    <item
        android:id="@+id/read"
        android:orderInCategory="300"
        android:showAsAction="ifRoom"
        android:title="" />
    <item
        android:id="@+id/browser"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/open_in_browser" />
    <item
        android:id="@+id/settings"
        android:title="@string/menuSettings"
        android:orderInCategory="500"
        android:icon="@drawable/ic_action_settings_dark"
        android:showAsAction="never" />

</menu>