<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.pixplicity.fonttextutils.FontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_padding_vertical"
            android:paddingLeft="@dimen/default_padding_horizontal"
            android:paddingTop="@dimen/default_padding_vertical"
            android:text="@string/choose_installation"
            android:textAppearance="@style/FontMedium" />


        <RadioGroup
            android:id="@+id/radioGroupServerType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pixplicity.fonttextutils.FontRadioButton
                android:id="@+id/radioFramabag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingLeft="@dimen/default_padding_horizontal"
                android:text="@string/framabag"
                android:textAppearance="@style/FontMedium" />

            <com.pixplicity.fonttextutils.FontRadioButton
                android:id="@+id/radioAnotherServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_padding_horizontal"
                android:text="@string/another_server"
                android:textAppearance="@style/FontMedium" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.pixplicity.wallabag.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/server_url_layout"
                app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel">

                <com.pixplicity.fonttextutils.FontEditText
                    android:id="@+id/editTextServerUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/server_url"
                    android:imeOptions="actionNext"
                    android:inputType="textUri"
                    android:nextFocusDown="@+id/editTextUsername"
                    android:singleLine="true"
                    android:textAppearance="@style/FontMedium" />
            </com.pixplicity.wallabag.ui.FloatLabelLayout>

            <com.pixplicity.wallabag.ui.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/user_name_layout"
                app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel">

                <com.pixplicity.fonttextutils.FontEditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:imeOptions="actionNext"
                    android:inputType="text|textPersonName"
                    android:nextFocusDown="@+id/editTextUserID"
                    android:singleLine="true"
                    android:textAppearance="@style/FontMedium" />
            </com.pixplicity.wallabag.ui.FloatLabelLayout>
        </LinearLayout>

        <com.pixplicity.wallabag.ui.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/user_id_layout"
            app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel">

            <com.pixplicity.fonttextutils.FontEditText
                android:id="@+id/editTextUserID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusDown="@+id/editTextToken"
                android:singleLine="true"
                android:textAppearance="@style/FontMedium" />
        </com.pixplicity.wallabag.ui.FloatLabelLayout>

        <com.pixplicity.wallabag.ui.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:floatLabelTextAppearance="@style/TextAppearance.Wallabag.FloatLabel">

            <com.pixplicity.fonttextutils.FontEditText
                android:id="@+id/editTextToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/token"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textAppearance="@style/FontMedium" />
        </com.pixplicity.wallabag.ui.FloatLabelLayout>
    </LinearLayout>

</ScrollView>