<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/ptr_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/list_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/li_article_margin_hor"
            tools:listitem="@layout/li_article"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/li_article_margin_vert"
            android:background="@color/article_list_background"/>

        <RelativeLayout
            android:id="@+id/no_articles_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/primary">

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/no_articles_text"
                android:textAppearance="@style/FontTitle"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:textColor="@color/font_light"
                android:text="@string/no_articles" />

            <com.pixplicity.fonttextutils.FontButton
                android:id="@+id/bt_settings"
                style="@style/TransparentButton"
                android:paddingLeft="@dimen/default_padding_horizontal"
                android:paddingRight="@dimen/default_padding_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/no_articles_text"
                android:layout_centerHorizontal="true"
                android:textColor="@color/font_light"
                android:text="@string/bt_no_articles" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wallaby_light"
                android:layout_above="@id/no_articles_text"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name" />
        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:choiceMode="singleChoice"
        android:background="@color/drawer_background"
        android:divider="@null"
        android:layout_gravity="start"
        tools:listitem="@layout/li_simple" />
</android.support.v4.widget.DrawerLayout>