<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/dark_theme_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <com.pixplicity.fonttextutils.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/defaultTopPadding"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:paddingTop="@dimen/defaultTopPadding"
                android:text="@string/dark_theme"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/dark_theme_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/defaultTopPadding"
                android:paddingRight="@dimen/defaultSidePadding"
                android:paddingTop="@dimen/defaultTopPadding" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/font_size_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/defaultTopPadding"
            android:paddingTop="@dimen/defaultTopPadding" >

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:text="@string/font_size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/font_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/font_size_text"
                    android:max="12"
                    android:paddingLeft="@dimen/defaultSidePadding" />

                <com.pixplicity.fonttextutils.FontTextView
                    android:id="@+id/font_size_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="@dimen/defaultSidePadding"
                    android:text="" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/font_style_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/defaultTopPadding"
            android:paddingTop="@dimen/defaultTopPadding" >

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:text="@string/font_style"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/font_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/text_align_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/defaultTopPadding"
            android:paddingTop="@dimen/defaultTopPadding" >

            <com.pixplicity.fonttextutils.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:text="@string/text_align"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/align_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/orientation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/defaultTopPadding"
            android:paddingTop="@dimen/defaultTopPadding" >

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:text="@string/rotation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/orientation_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:text="" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/immersive_mode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/defaultTopPadding"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:paddingTop="@dimen/defaultTopPadding"
                android:text="@string/immersive"
                android:layout_centerVertical="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/immersive_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/defaultTopPadding"
                android:paddingRight="@dimen/defaultSidePadding"
                android:paddingTop="@dimen/defaultTopPadding" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/keep_screen_on_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.pixplicity.fonttextutils.FontTextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/defaultTopPadding"
                android:paddingLeft="@dimen/defaultSidePadding"
                android:paddingTop="@dimen/defaultTopPadding"
                android:text="@string/keep_screen_on"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/screen_on_check_box"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/defaultTopPadding"
                android:paddingRight="@dimen/defaultSidePadding"
                android:paddingTop="@dimen/defaultTopPadding" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>